--- a/NightVisionGoggles/NightVisionGoggles.csproj
+++ b/NightVisionGoggles/NightVisionGoggles.csproj
@@ -54,7 +54,7 @@
       <Private>False</Private>
     </Reference>
     <Reference Include="UnityEngine.PhysicsModule">
-      <HintPath>..\..\..\..\EXILED_REFERENCES\UnityEngine.PhysicsModule.dll</HintPath>
+      <HintPath>$(EXILED_REFERENCES)\UnityEngine.PhysicsModule.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
