--- a/NightVisionGoggles/NightVisionGoggles.csproj
+++ b/NightVisionGoggles/NightVisionGoggles.csproj
@@ -63,10 +63,8 @@
     <Compile Include="EventHandlers.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="NightVisionGoggles.cs" />
-    <Compile Include="Patchs\BlockBadEffect.cs" />
-    <Compile Include="Patchs\BlockForceDrop.cs" />
+    <Compile Include="Patchs\ServerUpdateDeactivatingPatch.cs" />
     <Compile Include="Patchs\SetWearingTime.cs" />
-    <Compile Include="Patchs\SetWearOffTime.cs" />
     <Compile Include="Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
