fix multiple 1344 using

--- a/NightVisionGoggles/NightVisionGoggles.csproj
+++ b/NightVisionGoggles/NightVisionGoggles.csproj
@@ -63,6 +63,7 @@
     <Compile Include="EventHandlers.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="NightVisionGoggles.cs" />
+    <Compile Include="Patchs\CanStartUsingPatch.cs" />
     <Compile Include="Patchs\OnPlayerDisarmedPatch.cs" />
     <Compile Include="Patchs\ServerUpdateDeactivatingPatch.cs" />
     <Compile Include="Patchs\SetWearingTime.cs" />
